condvis: Conditional Visualisation for Statistical Models
=========================================================

News
---------------------------------------------------------

Version 0.3-3
  * fixed treatment of `pch` by condtour, was previously defaulting to 1 when it
    should have been 21 for background colours.

Version 0.3-2
  * fixed bug with `rep` for `col` and `pch` where `length.out` was omitted,
    causing huge delays for `plotxs`.

Version 0.3-1
  * removed test which timed `similarityweight` (for CRAN)

Version 0.3-0
  * removed daisy distance measure, and relevant contributors.
  * renamed `visualweight` to `similarityweight` and changed parameter names.
  * renamed parameters in `ceplot`.
  * Shiny implementation completely rewritten, see R/ceplot.shiny.R.
  * added Roxygen comments for documentation of exported functions.
  * added update methods to parallel coordinates and scatterplot matrix
    condition selector plots.
  * `condtour` can now handle mixed data (categorical and continuous).

Version 0.2-2 01 Apr 2016
  * updated contributors for copied code.
  * added simple example to README.

Version 0.2-1 23 Feb 2016
  * initial release on CRAN.